# citepro_notebook

./: .gitignore  Basic_usage.ipynb  Basic_usage_GUI.ipynb  README.md  pyproject.toml  requirements.txt
